--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -21,6 +21,54 @@ $colorText: #525252;
     color: #000!important;
 }
 
+.modalLoginError{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    background-color: #fff;
+    padding: 50px;
+    border-radius: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    @media (max-width: 800px){
+        width: calc(100% - 40px);
+        padding: 10px 20px;
+    }
+    & .InnerBorder{
+        border: 1px solid $mainColor;
+        border-radius: 10px;
+        padding: 20px;
+    }
+    & .loginHeader{
+        height: 60px;
+        margin-bottom: 50px;
+        margin-top: 50px;
+        text-align: center;
+        & h2{
+            @include fonsNew(2rem, $Roboto);
+            font-weight: 500;
+        }
+    }
+    & .loginSubHeader1{
+        margin-bottom: 30px;
+        text-align: center;
+        & span{
+            @include fonsNew(1rem, $Roboto);
+            font-weight: 400;
+        }
+    }
+    & .loginSubHeader2{
+        margin-bottom: 80px;
+        text-align: center;
+        & span{
+            @include fonsNew(1rem, $Roboto);
+            font-weight: 400;
+        }
+    }
+}
 .modalLoginFinish{
     position: absolute;
     top: 50%;
@@ -44,7 +92,6 @@ $colorText: #525252;
         align-items: center;
         justify-content: center;
         & > img{
-            width: fit-content;
             height: 100%;
         }
     }
@@ -165,7 +212,6 @@ $colorText: #525252;
         align-items: center;
         justify-content: center;
         & > img{
-            width: fit-content;
             height: auto;
         }
     }
@@ -354,7 +400,6 @@ $colorText: #525252;
         align-items: center;
         justify-content: center;
         & > img{
-            width: fit-content;
             height: 100%;
         }
     }
@@ -518,7 +563,6 @@ $colorText: #525252;
         align-items: center;
         justify-content: center;
         & > img{
-            width: fit-content;
             height: 100%;
         }
     }
@@ -642,7 +686,6 @@ $colorText: #525252;
         align-items: center;
         justify-content: center;
         & > img{
-            width: fit-content;
             height: 100%;
         }
     }
@@ -767,7 +810,6 @@ $colorText: #525252;
         align-items: center;
         justify-content: center;
         & > img{
-            width: fit-content;
             height: 100%;
         }
     }
