--- a/src/components/actii/actii.style.scss
+++ b/src/components/actii/actii.style.scss
@@ -41,6 +41,10 @@ $Futuris: 'FuturaFuturisC Bold';
 }
 .Actii{
     margin-top: 64px!important;
+    @media (min-width: 800px) {
+        margin-top: 170px!important;
+    }
+    
     & h1, h2{
         @include fons_new(2rem, $Futuris);
         text-align: center;
