--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -21,6 +21,112 @@ $colorText: #525252;
     color: #000!important;
 }
 
+.headerNew{
+    background-color: #fff!important;
+    & > div{
+        padding: 0px!important;
+        margin: 0px!important;
+        @media (min-width: 0px){
+            height: 140px;
+            min-height: 140px;
+        }
+        & .headerCat:not(.activeCat){
+            @include fonsNew(1.25rem, $Roboto);
+            font-weight: 300;
+            width: 100%;
+            height: 60px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            &:hover{
+                border-radius: 15px;
+                background-color: #f9ebce;
+            }
+        }
+        & .headerCat.activeCat{
+            @include fonsNew(1.25rem, $Roboto);
+            font-weight: 400;
+            border-radius: 15px;
+            background-color: #F9BC23;
+            width: 100%;
+            height: 60px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            &:hover{
+                border-radius: 15px;
+                font-weight: 400;
+                background-color: #e1b242;
+            }
+        }
+        & .headerProfile{
+            height: 56px;
+            border-radius: 120px;
+            background-color: #fff;
+            border: 2px solid #F9BC23;
+            cursor: pointer;
+            & span{
+                @include fonsNew(0.95rem, $Roboto);
+                font-weight: 300;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+            &:hover{
+                background-color: #fdf8ed;
+            }
+            &:target{
+                background-color: #f9ebce;
+            }
+        }
+        & .headerCart.count{
+            justify-content: space-between;
+            & span{
+                margin-left: 22px;
+            }
+            & > div{
+                margin-right: 12px;
+            }
+        }
+        & .headerCart{
+            height: 60px;
+            border-radius: 120px;
+            background-color: #F9BC23;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            & span{
+                @include fonsNew(1.25rem, $Roboto);
+                font-weight: 400;
+            }
+            &:hover{
+                background-color: #e1b242;
+            }
+            &:target{
+                background-color: #cf9f37;
+            }
+            & > div{
+                background-color: $mainColor;
+                border-radius: 120px;
+                @include fonsNew(1.25rem, $Roboto);
+                font-weight: 400;
+                color: #fff;
+
+                width: 40px;
+                height: 40px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+        }
+    }
+}
+
 .modalLoginError{
     position: absolute;
     top: 50%;
@@ -763,6 +869,95 @@ $colorText: #525252;
         box-shadow: none!important;
         border: 0 !important;
         outline: none !important;
+    }
+}
+
+.modalCity{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    background-color: #fff;
+    padding: 30px 80px;
+    border-radius: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    @media (max-width: 800px){
+        width: calc(100% - 40px);
+        padding: 10px 20px;
+    }
+    & .loginIMG{
+        height: 90px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        & > img{
+            height: 100%;
+        }
+    }
+    & .loginHeader{
+        height: 60px;
+        margin-bottom: 60px;
+        display: flex;
+        align-items: flex-end;
+        & h2{
+            @include fonsNew(2rem, $Roboto);
+            font-weight: 500;
+        }
+    }
+    & a:not(.active){
+        width: 75%;
+        height: 60px;
+        border-radius: 120px;
+        background-color: #fff;
+        border: 1px solid #F9BC23;
+        cursor: pointer;
+        text-decoration: none;
+        & span{
+            @include fonsNew(1.25rem, $Roboto);
+            font-weight: 500;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        &:hover{
+            background-color: #fdf8ed;
+        }
+        &:target{
+            background-color: #f9ebce;
+        }
+    }
+    & a.active{
+        width: 75%;
+        height: 60px;
+        border-radius: 120px;
+        background-color: #F9BC23;
+        margin-bottom: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        text-decoration: none;
+        & span{
+            @include fonsNew(1.25rem, $Roboto);
+            font-weight: 500;
+        }
+        &:hover{
+            background-color: #e1b242;
+        }
+        &:target{
+            background-color: #cf9f37;
+        }
+    }
+    & a:last-child{
+        margin-bottom: 100px;
+    }
+    & a:not(:last-child){
+        margin-bottom: 40px;
     }
 }
 .modalLoginStart{
