--- a/src/components/pageInstPay/pageInstPay.style.scss
+++ b/src/components/pageInstPay/pageInstPay.style.scss
@@ -10,6 +10,9 @@ $Futuris: 'FuturaFuturisC Bold';
 }
 .PAGEinstpay{
     margin-top: 64px!important;
+    @media (min-width: 800px) {
+        margin-top: 170px!important;
+    }
     & h1{
         @include fons_new(1.3rem, $Futuris);
         text-align: center;
