--- a/src/components/contact/contact.style.scss
+++ b/src/components/contact/contact.style.scss
@@ -13,6 +13,9 @@ $Futuris: 'FuturaFuturisC Bold';
 }
 .Contact{
     margin-top: 64px!important;
+    @media (min-width: 800px) {
+        margin-top: 170px!important;
+    }
     & h1{
         @include fons_new(2rem, $Futuris);
     }
