--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -22,6 +22,7 @@ $colorText: #525252;
 }
 
 .headerNew{
+    z-index: 1200!important;
     background-color: #fff!important;
     & > div{
         padding: 0px!important;
