--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -143,7 +143,10 @@ $colorMain: #CC0033;
 }
 
 .swiper_pc{
-    padding-top: 50px!important;
+    margin-top: 64px!important;
+    @media (min-width: 800px) {
+        margin-top: 140px!important;
+    }
     margin-bottom: 20px!important;
     & .swiper-slide-prev{
        // margin-right: 5vw!important;
