--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -63,6 +63,22 @@ $colorText: #525252;
 	background-color: #d0d0d0;
 }
 
+.blurBacground{
+    background-color: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+
+    -moz-backdrop-filter: blur(15px);
+    -o-backdrop-filter: blur(15px);
+    -ms-backdrop-filter: blur(15px);
+}
+
+@supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+    .blurBacground{
+        background-color: rgba(0, 0, 0, 0.9);
+    }
+}
+
 .grecaptcha-badge{
     display: none!important;
 }
