--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -20,7 +20,58 @@ $colorText: #525252;
 .ModalContent_1_2 input:disabled{
     color: #000!important;
 }
+@supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+    .MuiDrawer-root.MuiDrawer-modal .MuiDrawer-paper{
+        min-width: 80%;
+        background-color: rgba(0, 0, 0, 0.9);
+    }
+}
+.MuiDrawer-root.MuiDrawer-modal{
+    & .MuiDrawer-paper{
+        min-width: 80%;
+        background-color: rgba(0, 0, 0, 0.6);
+        backdrop-filter: blur(15px);
+        -webkit-backdrop-filter: blur(15px);
 
+        -moz-backdrop-filter: blur(15px);
+        -o-backdrop-filter: blur(15px);
+        -ms-backdrop-filter: blur(15px);
+        & .LinkList li:first-child a{
+            margin-top: 70px;
+        }
+        & .LinkList a{
+            @include fonsNew(1.625rem, $Roboto);
+            color: #fff;
+            font-weight: bold;
+            width: 100%;
+            height: 60px;
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            text-decoration: none;
+            margin-right: 40px;
+        }
+    }
+}
+
+
+
+.headerNewMobile{
+    z-index: 1200!important;
+    background-color: #fff!important;
+    & > div{
+        padding: 0px!important;
+        margin: 0px 20px 0px 20px !important;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        @media (min-width: 0px){
+            height: 60px;
+            min-height: 60px;
+        }
+    }
+}
 .headerNew{
     z-index: 1200!important;
     background-color: #fff!important;
