--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -932,6 +932,46 @@ body{
         flex-direction: column;
     }
 }
+.bottomNavigateNew{
+    position: fixed;
+    bottom: 0px; 
+    width: 100%;
+    height: 172px; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    background-color: #fff;
+    z-index: 2;
+    & > .textPrice{
+        @include fonsNew(1.25rem, $Roboto);
+        font-weight: 700;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    & > a{
+        width: 75%;
+        height: 60px;
+        border-radius: 120px;
+        background-color: #fff;
+        border: 1px solid #F9BC23;
+        cursor: pointer;
+        
+        @include fonsNew(1.25rem, $Roboto);
+        font-weight: 500;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+        &:hover{
+            background-color: #fdf8ed;
+        }
+        &:target{
+            background-color: #f9ebce;
+        }
+    }
+}
+
 .bottomNavigate{
     position: fixed;
     bottom: 0px; 
