--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -949,7 +949,7 @@ body{
         margin-top: 20px;
         margin-bottom: 20px;
     }
-    & > a{
+    & > a, span:not(.textPrice){
         width: 75%;
         height: 60px;
         border-radius: 120px;
