--- a/src/components/home/home.style.scss
+++ b/src/components/home/home.style.scss
@@ -30,12 +30,8 @@ $colorText: #525252;
         width: 100%;
         margin-left: 20px;
         overflow-x: auto;
-        //scroll-snap-type: x proximity;
-
-        //scroll-snap-type: x proximity;
-        //scroll-padding: 50%;
-
         -ms-overflow-style: none;
+        overflow: -moz-scrollbars-none;
         scrollbar-width: none;
         display: flex;
         flex-direction: row;
@@ -250,7 +246,7 @@ $colorText: #525252;
 .swiper_pc{
     margin-top: 60px!important;
     @media (min-width: 800px) {
-        margin-top: 140px!important;
+        margin-top: 100px!important;
     }
     margin-bottom: 20px!important;
     & .swiper-slide-prev{
