--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -935,8 +935,9 @@ body{
 .bottomNavigateNew{
     position: fixed;
     bottom: 0px; 
+    padding-top: 15px;
     width: 100%;
-    height: 120px; 
+    height: 70px; 
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -951,7 +952,7 @@ body{
     }
     & > a, span:not(.textPrice){
         width: 75%;
-        height: 60px;
+        height: 40px;
         border-radius: 120px;
         background-color: #fff;
         border: 1px solid #F9BC23;
