--- a/src/components/app/app.style.scss
+++ b/src/components/app/app.style.scss
@@ -131,7 +131,7 @@ body{
         @media (min-width: 961px){
             bottom: 30px;
         }
-        & span{
+        & a{
             color: $colorMain;
         }
         & svg{
