--- a/src/components/profile/profile.style.scss
+++ b/src/components/profile/profile.style.scss
@@ -159,6 +159,9 @@ $colorText: #525252;
         }
     }
 } 
+.MuiTabs-scroller{
+    //overflow: auto!important;
+}
 .MuiTabs-scroller.MuiTabs-fixed > div{
     justify-content: center;
     & span{
